--- a/demo-springboot/demo-dubbo/demo-dubbo-api/pom.xml
+++ b/demo-springboot/demo-dubbo/demo-dubbo-api/pom.xml
@@ -12,7 +12,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <dubbo.version>2.7.6</dubbo.version>
+        <dubbo.version>2.7.7</dubbo.version>
     </properties>
 
     <dependencies>
@@ -48,6 +48,20 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--&lt;!&ndash; Dubbo Registry Nacos &ndash;&gt;-->
+        <!--&lt;!&ndash;使用 nacos 作为 dubbo 的注册中心&ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.dubbo</groupId>-->
+            <!--<artifactId>dubbo-registry-nacos</artifactId>-->
+            <!--<version>${dubbo.version}</version>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>com.alibaba.nacos</groupId>-->
+            <!--<artifactId>nacos-client</artifactId>-->
+            <!--<version>1.2.1</version>-->
+        <!--</dependency>
+
     </dependencies>
 
 
