--- a/demo-springboot/demo-dubbo/demo-dubbo-consumer/src/main/resources/application.properties
+++ b/demo-springboot/demo-dubbo/demo-dubbo-consumer/src/main/resources/application.properties
@@ -6,4 +6,6 @@ server.port=8088
 dubbo.application.name=dubbo-consumer
 dubbo.registry.protocol=zookeeper
 dubbo.registry.address=localhost:2181
+#用nacos作为dubbo的注册中心时的配置
+#dubbo.registry.address=nacos://127.0.0.1:8848
 group.name=test
