--- a/demo-springboot/demo-dubbo/demo-dubbo-provider/src/main/resources/application.properties
+++ b/demo-springboot/demo-dubbo/demo-dubbo-provider/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
 #dubbo\u914D\u7F6E
 dubbo.application.name=dubbo-provider
-dubbo.registry.address=zookeeper://localhost:2181
+#用nacos作为dubbo的注册中心时的配置
+#dubbo.registry.address=nacos://127.0.0.1:8848
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=-1
 dubbo.scan.base-packages=com.example
