--- a/demo-springboot/demo-nacos/src/main/resources/application.properties
+++ b/demo-springboot/demo-nacos/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #nacos
-nacos.config.server-addr=172.22.208.54:8848
+nacos.config.server-addr=xxx:8848
+nacos.config.namespace=xxxx # 命名空间ID 不是命名空间名称
 
 #port
 server.port=8081
