nacos-demo 本地测试：namespace的情况，使用 dataId+groupId

--- a/demo-springboot/demo-nacos/src/main/resources/application.properties
+++ b/demo-springboot/demo-nacos/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #nacos
-nacos.config.server-addr=xxx:8848
-nacos.config.namespace=xxxx # 命名空间ID 不是命名空间名称
+nacos.config.server-addr=localhost:8848
+nacos.config.namespace=ad6f0684-5f54-4431-906c-69ef4ca7a9d6
 
 #port
 server.port=8081
