--- a/demo-springboot/demo-dubbo/demo-dubbo-api/pom.xml
+++ b/demo-springboot/demo-dubbo/demo-dubbo-api/pom.xml
@@ -49,7 +49,7 @@
             </exclusions>
         </dependency>
         <!--&lt;!&ndash; Dubbo Registry Nacos &ndash;&gt;-->
-        <!--&lt;!&ndash;Ê¹ÓÃ nacos ×÷Îª dubbo µÄ×¢²áÖÐÐÄ&ndash;&gt;-->
+        <!--&lt;!&ndash;Ê¹ï¿½ï¿½ nacos ï¿½ï¿½Îª dubbo ï¿½ï¿½×¢ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½&ndash;&gt;-->
         <!--<dependency>-->
             <!--<groupId>org.apache.dubbo</groupId>-->
             <!--<artifactId>dubbo-registry-nacos</artifactId>-->
@@ -60,7 +60,7 @@
             <!--<groupId>com.alibaba.nacos</groupId>-->
             <!--<artifactId>nacos-client</artifactId>-->
             <!--<version>1.2.1</version>-->
-        <!--</dependency>
+        <!--</dependency>-->
 
     </dependencies>
 
