springboot + dubbo + nacos

--- a/demo-springboot/demo-dubbo/demo-dubbo-consumer/src/main/resources/application.properties
+++ b/demo-springboot/demo-dubbo/demo-dubbo-consumer/src/main/resources/application.properties
@@ -2,10 +2,7 @@
 server.servlet.context-path=/dubbo-consumer
 server.port=8088
 
-## Dubbo \u914D\u7F6E
+## Dubbo setting
 dubbo.application.name=dubbo-consumer
-dubbo.registry.protocol=zookeeper
-dubbo.registry.address=localhost:2181
-#用nacos作为dubbo的注册中心时的配置
-#dubbo.registry.address=nacos://127.0.0.1:8848
+dubbo.registry.address=nacos://127.0.0.1:8848
 group.name=test
