--- a/demo-springboot/demo-jta-atomikos/pom.xml
+++ b/demo-springboot/demo-jta-atomikos/pom.xml
@@ -34,6 +34,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>com.alibaba</groupId>-->
+            <!--<artifactId>druid-spring-boot-starter</artifactId>-->
+            <!--<version>1.2.3</version>-->
+        <!--</dependency>-->
+
         <!--通用mapper起步依赖-->
         <dependency>
             <groupId>tk.mybatis</groupId>
@@ -46,6 +52,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
