--- a/demo-springboot/demo-jta-atomikos/src/main/resources/application.properties
+++ b/demo-springboot/demo-jta-atomikos/src/main/resources/application.properties
@@ -1,1 +1,43 @@
 
+
+
+#spring.datasource.druid.initial-size=5
+#spring.datasource.druid.max-active=20
+#spring.datasource.druid.min-idle=5
+#spring.datasource.druid.max-wait=60000
+#spring.datasource.druid.pool-prepared-statements=true
+#spring.datasource.druid.max-open-prepared-statements=20
+#spring.datasource.druid.validation-query=SELECT 1 FROM DUAL
+#spring.datasource.druid.validation-query-timeout=60000
+#spring.datasource.druid.test-on-borrow=false
+#spring.datasource.druid.test-on-return=false
+#spring.datasource.druid.test-while-idle=true
+#spring.datasource.druid.time-between-eviction-runs-millis=
+#spring.datasource.druid.min-evictable-idle-time-millis=300000
+#spring.datasource.druid.max-evictable-idle-time-millis=
+#spring.datasource.druid.filters= #配置多个英文逗号分隔
+
+server.port=9090
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url= jdbc:mysql://127.0.0.1:3306/test1?useUnicode=true&characterEncoding=UTF8&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.username= root
+spring.datasource.password= root
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=15
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.pool-name=Hikari-test
+spring.datasource.hikari.max-lifetime=55000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.connection-test-query=SELECT 1
+
+spring.data.mongodb.uri=mongodb://127.0.0.1:27018,127.0.0.1:27019/test1?authSource=test1&slaveOk=true&replicaSet=zxqTest&write=1&readPreference=secondaryPreferred&connectTimeoutMS=300000
+
+
+#mongodb setting
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.authentication-database=test1
+#spring.data.mongodb.database=test1
