--- a/demo-springboot/demo-mysql/src/main/resources/application.properties
+++ b/demo-springboot/demo-mysql/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://localhost:3306/edu1?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/temp?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false
 spring.datasource.username= root
 spring.datasource.password= root
 # Hikari will use the above plus the following to setup connection pooling
