--- a/demo-springboot/demo-redis/src/main/resources/application.properties
+++ b/demo-springboot/demo-redis/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+spring.redis.password=
+spring.redis.timeout=5000ms
+spring.redis.cluster.nodes=
+spring.redis.cluster.max-redirects=6
+spring.redis.lettuce.pool.min-idle=100
+spring.redis.lettuce.pool.max-idle=300
+spring.redis.lettuce.pool.max-wait=1000ms
+spring.redis.lettuce.pool.max-active=400
