springboot Filter  1 Servlet 输入流的重复读取的问题  2 打印 入参日志  3 controller 中的接口耗时

--- a/demo-springboot/demo-filter/src/main/resources/application.properties
+++ b/demo-springboot/demo-filter/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8082
-server.servlet.context-path=/fdemo
+#server.servlet.context-path=/fdemo
 
 #"\u5173\u95ED\u7F13\u5B58, \u5373\u65F6\u5237\u65B0"
 #spring.freemarker.cache=false
