--- a/demo-springboot/demo-mdc/src/main/resources/application.properties
+++ b/demo-springboot/demo-mdc/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 logging.pattern.level = %X{userId}%5p
+
+#logging.config=classpath:logback-spring-no-use.xml
+
+#日志配置
+#根日志级别配置 整个项目的输出日志的级别  默认是 info
+logging.level.root=info
+
+#定义某个包的日志输出级别
+logging.level.com.example.demomdc.controller=warn
+
+#定义日志信息输出到文件
+#logging.path=
+#不指定路径在当前项目下生成springboot.log日志
+
+#可以指定完整的路径;
+#logging.file=G:/springboot.log
+#在当前项目下创建spring文件夹和里面的log文件夹;使用spring.log作为默认文件
+logging.file.path=spring.log
+#指定文件中日志输出的格式
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{50} - %msg %n
+
+# 在控制台输出的日志的格式
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{50} - %msg %n
