demo-redis 分布式锁

--- a/demo-springboot/demo-redis/src/main/resources/application.properties
+++ b/demo-springboot/demo-redis/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.redis.lettuce.pool.min-idle=100
 spring.redis.lettuce.pool.max-idle=300
 spring.redis.lettuce.pool.max-wait=1000ms
 spring.redis.lettuce.pool.max-active=400
+
+thread.pool.size=10
+#cron job setting
+cron.online=*/6 * * * * ?
+cron.offline=*/60 * * * * ?
+cron.dayCycle=0 0 0 * * ?
+cron.weekCycle=0 0 0 ? * MON
+cron.monthCycle=0 0 0 1 * ?
