demo-sqlserver 1.注意 表名和字段名 不要与数据库关键字冲突

--- a/demo-springboot/demo-sqlserver/src/main/resources/application.yml
+++ b/demo-springboot/demo-sqlserver/src/main/resources/application.yml
@@ -1,7 +1,21 @@
 spring:
   datasource:
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-    type: com.alibaba.druid.pool.DruidDataSource
-    url:
-    username:
-    password:
+    username: u
+    password: p
+    url: jdbc:sqlserver://ip;DatabaseName=db
+
+mybatis-plus:
+  configuration:
+    #配置返回数据库(column下划线命名&&返回java实体是驼峰命名)，自动匹配无需as（没开启这个，SQL需要写as： select user_id as userId）
+    map-underscore-to-camel-case: true
+    auto-mapping-behavior: full
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  mapper-locations: classpath*:mapper/**/*Mapper.xml
+  global-config:
+    # 逻辑删除配置
+    db-config:
+      # 删除前
+      logic-not-delete-value: 1
+      # 删除后
+      logic-delete-value: 0
