--- a/demo-springboot/demo-sqlserver/pom.xml
+++ b/demo-springboot/demo-sqlserver/pom.xml
@@ -15,9 +15,6 @@
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>11</java.version>
-
-        <sqljdbc4.version>4.0</sqljdbc4.version>
-        <mybatis.plus.version>3.2.0</mybatis.plus.version>
     </properties>
     <dependencies>
         <dependency>
@@ -25,24 +22,19 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>sqljdbc4</artifactId>
-            <scope>runtime</scope>
-            <version>${sqljdbc4.version}</version>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>8.2.2.jre11</version>
         </dependency>
 
+
+        <!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-boot-starter -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>${mybatis.plus.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.21</version>
-            <optional>true</optional>
+            <version>3.4.2</version>
         </dependency>
 
         <dependency>
