--- a/demo-springboot/demo-upload-files/src/main/resources/application.properties
+++ b/demo-springboot/demo-upload-files/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 # files storage location (stores all files uploaded via REST API)
 storage.location=./uploads
+
+
+server.port=18201
