--- a/demo-springboot/demo-upload-files/pom.xml
+++ b/demo-springboot/demo-upload-files/pom.xml
@@ -14,7 +14,7 @@
     <name>demo-upload-files</name>
     <description>Demo project for Spring Boot</description>
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -44,6 +44,19 @@
             <version>2.12.1</version>
         </dependency>
 
+        <!--swagger文档-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+            <version>1.9.6</version>
+        </dependency>
+        <!--swagger文档-->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
