java 8 -> 11 需要的一些变动

--- a/demo-springboot/demo-dubbo/demo-dubbo-consumer/src/main/resources/application.properties
+++ b/demo-springboot/demo-dubbo/demo-dubbo-consumer/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 server.servlet.context-path=/dubbo-consumer
-server.port=8088
+server.port=18088
 
 ## Dubbo setting
 dubbo.application.name=dubbo-consumer
-dubbo.registry.address=nacos://127.0.0.1:8848
-group.name=test
+dubbo.registry.address=nacos://ip:8848
+group.name=dev
