--- a/demo-springboot/demo-dubbo/demo-dubbo-api/pom.xml
+++ b/demo-springboot/demo-dubbo/demo-dubbo-api/pom.xml
@@ -11,10 +11,13 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
+<!--        <java.version>11</java.version>-->
+<!--        <maven.compiler.source>11</maven.compiler.source>-->
+<!--        <maven.compiler.target>11</maven.compiler.target>-->
+
         <java.version>1.8</java.version>
         <dubbo.version>2.7.7</dubbo.version>
     </properties>
-
     <dependencies>
 
         <dependency>
