--- a/demo-springboot/demo-dubbo/demo-dubbo-provider/pom.xml
+++ b/demo-springboot/demo-dubbo/demo-dubbo-provider/pom.xml
@@ -12,10 +12,14 @@
     <artifactId>demo-dubbo-provider</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo-dubbo-provider</name>
+    <packaging>jar</packaging>
     <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
+<!--        <java.version>11</java.version>-->
+<!--        <maven.compiler.source>11</maven.compiler.source>-->
+<!--        <maven.compiler.target>11</maven.compiler.target>-->
     </properties>
 
     <dependencies>
@@ -49,6 +53,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.5.RELEASE</version>
             </plugin>
         </plugins>
     </build>
