--- a/demo-springboot/demo-dubbo/demo-dubbo-provider/src/main/resources/application.properties
+++ b/demo-springboot/demo-dubbo/demo-dubbo-provider/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 
 #dubbo setting
 dubbo.application.name=dubbo-provider
-dubbo.registry.address=nacos://127.0.0.1:8848
+dubbo.registry.address=nacos://ip:8848
 dubbo.protocol.name=dubbo
-dubbo.protocol.port=-1
+dubbo.protocol.port=20889
 dubbo.scan.base-packages=com.example
-group.name=test
+group.name=dev
+
+server.port=18089
