--- a/demo-springboot/demo-jaeger/src/main/resources/application.properties
+++ b/demo-springboot/demo-jaeger/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+server.port=80
+spring.application.name=opentracing-demo
+
+opentracing.jaeger.enabled=true
+#opentracing.jaeger.udp-sender.host=localhost
+#opentracing.jaeger.udp-sender.port=6831
+opentracing.jaeger.http-sender.url=http://xxx.xxx.xxx.xxx:14268/api/traces
