--- a/spring-cloud/nacos/pom.xml
+++ b/spring-cloud/nacos/pom.xml
@@ -2,21 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>spring-cloud</artifactId>
+        <groupId>cn.seasun</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.seasun</groupId>
-    <artifactId>spring-cloud</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>nacos</artifactId>
     <packaging>pom</packaging>
-
+    <modules>
+        <module>nacos-discovery-demo01-provider</module>
+    </modules>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
-    <modules>
-        <module>eureka</module>
-        <module>nacos</module>
-    </modules>
-    
 </project>
