--- a/spring-cloud/nacos/pom.xml
+++ b/spring-cloud/nacos/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>nacos-discovery-demo01-provider</module>
+        <module>nacos-discovery-demo01-consumer</module>
     </modules>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
