--- a/spring-cloud/nacos/pom.xml
+++ b/spring-cloud/nacos/pom.xml
@@ -14,6 +14,10 @@
     <modules>
         <module>nacos-discovery-demo01-provider</module>
         <module>nacos-discovery-demo01-consumer</module>
+
+        <module>nacos-discovery-demo02-provider</module>
+        <module>nacos-discovery-demo02-consumer</module>
+
     </modules>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
