--- a/spring-cloud/nacos/pom.xml
+++ b/spring-cloud/nacos/pom.xml
@@ -18,6 +18,8 @@
         <module>nacos-discovery-demo02-provider</module>
         <module>nacos-discovery-demo02-consumer</module>
 
+        <module>nacos-discovery-demo03-consumer</module>
+
     </modules>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
