--- a/spring-cloud/feign/pom.xml
+++ b/spring-cloud/feign/pom.xml
@@ -2,22 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>spring-cloud</artifactId>
+        <groupId>cn.seasun</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.seasun</groupId>
-    <artifactId>spring-cloud</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>feign</artifactId>
     <packaging>pom</packaging>
-
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
-
     <modules>
-        <module>eureka</module>
-        <module>nacos</module>
-        <module>feign</module>
+        <module>feign-demo01-consumer</module>
+        <module>feign-demo01-provider</module>
+
     </modules>
-    
+
+
 </project>
