--- a/spring-cloud/dubbo/dubbo-demo02/dubbo-demo02-api/pom.xml
+++ b/spring-cloud/dubbo/dubbo-demo02/dubbo-demo02-api/pom.xml
@@ -3,14 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-cloud</artifactId><groupId>cn.seasun</groupId><version>1.0-SNAPSHOT</version>
+        <artifactId>dubbo-demo02</artifactId><groupId>cn.seasun</groupId><version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dubbo</artifactId>
-    <packaging>pom</packaging>
-    <modules><module>dubbo-demo01</module><module>dubbo-demo02</module>
-        </modules>
+    <artifactId>dubbo-demo02-api</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
