--- a/spring-cloud/dubbo/dubbo-demo01/dubbo-demo01-provider/pom.xml
+++ b/spring-cloud/dubbo/dubbo-demo01/dubbo-demo01-provider/pom.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"><parent><artifactId>dubbo</artifactId><groupId>cn.seasun</groupId><version>1.0-SNAPSHOT</version></parent>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent><artifactId>dubbo-demo01</artifactId><groupId>cn.seasun</groupId><version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dubbo-demo1-consumer</artifactId>
+    <artifactId>dubbo-demo01-provider</artifactId>
 
     <properties>
         <spring.boot.version>2.3.12.RELEASE</spring.boot.version>
@@ -49,18 +51,12 @@
             <artifactId>dubbo-demo01-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
         <dependency>
             <groupId>com.alibaba.spring</groupId>
             <artifactId>spring-context-support</artifactId>
             <version>1.0.11</version>
         </dependency>
 
-        <!-- 引入 SpringMVC 相关依赖，并实现对其的自动配置 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
         <!-- 引入 Spring Cloud Alibaba Nacos Discovery 相关依赖，将 Nacos 作为注册中心，并实现对其的自动配置 -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
