--- a/spring-cloud/dubbo/dubbo-demo03/dubbo-demo03-provider/pom.xml
+++ b/spring-cloud/dubbo/dubbo-demo03/dubbo-demo03-provider/pom.xml
@@ -2,10 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent><artifactId>dubbo-demo02</artifactId><groupId>cn.seasun</groupId><version>1.0-SNAPSHOT</version></parent>
+    <parent><artifactId>dubbo-demo03</artifactId><groupId>cn.seasun</groupId><version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dubbo-demo02-provider-springmvc</artifactId><version>1.0-SNAPSHOT</version>
+    <artifactId>dubbo-demo03-provider</artifactId>
 
     <properties>
         <spring.boot.version>2.3.12.RELEASE</spring.boot.version>
@@ -47,16 +48,10 @@
         <!-- 引入定义的 Dubbo API 接口 -->
         <dependency>
             <groupId>cn.seasun</groupId>
-            <artifactId>dubbo-demo02-api</artifactId>
+            <artifactId>dubbo-demo03-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
-        <!-- 引入 SpringMVC 相关依赖，并实现对其的自动配置 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
+        <!-- alibaba 2.2.7.RELEASE 启动异常需要引入的包    -->
         <dependency>
             <groupId>com.alibaba.spring</groupId>
             <artifactId>spring-context-support</artifactId>
