--- a/spring-cloud/dubbo/dubbo-demo03/pom.xml
+++ b/spring-cloud/dubbo/dubbo-demo03/pom.xml
@@ -2,19 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>spring-cloud</artifactId><groupId>cn.seasun</groupId><version>1.0-SNAPSHOT</version>
+    <parent><artifactId>dubbo</artifactId><groupId>cn.seasun</groupId><version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dubbo</artifactId>
+    <artifactId>dubbo-demo03</artifactId>
     <packaging>pom</packaging>
-    <modules><module>dubbo-demo01</module><module>dubbo-demo02</module><module>dubbo-demo03</module>
-        </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+    <modules>
+        <module>dubbo-demo03-api</module>
+        <module>dubbo-demo03-provider</module>
+        <module>dubbo-demo03-consumer</module>
+    </modules>
     
 </project>
