spring-cloud gateway demo2 动态路由

--- a/spring-cloud/spring-cloud-gateway/pom.xml
+++ b/spring-cloud/spring-cloud-gateway/pom.xml
@@ -13,6 +13,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>gateway-demo01</module>
+        <module>gateway-demo02-registry</module>
+        <module>user-service</module>
     </modules>
 
     <properties>
