spring-cloud gateway 基于配置中心 Nacos 实现动态路由

--- a/spring-cloud/spring-cloud-gateway/pom.xml
+++ b/spring-cloud/spring-cloud-gateway/pom.xml
@@ -15,6 +15,7 @@
         <module>gateway-demo01</module>
         <module>gateway-demo02-registry</module>
         <module>user-service</module>
+        <module>gateway-demo03-config-nacos</module>
     </modules>
 
     <properties>
