spring-cloud gateway weight 灰度发布

--- a/spring-cloud/spring-cloud-gateway/pom.xml
+++ b/spring-cloud/spring-cloud-gateway/pom.xml
@@ -16,6 +16,7 @@
         <module>gateway-demo02-registry</module>
         <module>user-service</module>
         <module>gateway-demo03-config-nacos</module>
+        <module>gateway-demo04</module>
     </modules>
 
     <properties>
