spring-cloud gateway Filter 认证

--- a/spring-cloud/spring-cloud-gateway/pom.xml
+++ b/spring-cloud/spring-cloud-gateway/pom.xml
@@ -17,6 +17,7 @@
         <module>user-service</module>
         <module>gateway-demo03-config-nacos</module>
         <module>gateway-demo04</module>
+        <module>gateway-demo05-custom-gateway-filter</module>
     </modules>
 
     <properties>
